namespace IV.DX.Kernel.Enums
{
    public enum DXColumnTypeEnum
    {
        GUID = 1,
        TimeStamp = 2,
        String = 3,
        Text = 4,
        DateTime = 5,
        Bool = 6,
        Short = 7,
        Int = 8,
        Long = 9,
        Decimal = 10,
        Float = 11,
        Currency = 12,
        Blob = 13,
        HashedString = 14
    }
}
