namespace IV.DX.Kernel.Enums
{
    public enum DXElementInUnitTypeEnum
    {
        SingleMandatory = 1,
        SingleOptional = 2,
        MultiMandatory = 3,
        MultiOptional = 4
    }
}